; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/l2cap/extr_l2c_ble.c_l2c_link_processs_ble_num_bufs.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/l2cap/extr_l2c_ble.c_l2c_link_processs_ble_num_bufs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i64, i32 }

@L2C_DEF_NUM_BLE_BUF_SHARED = common dso_local global i64 0, align 8
@l2cb = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@.str = private unnamed_addr constant [21 x i8] c"num_lm_ble_bufs = %d\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @l2c_link_processs_ble_num_bufs(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i64, i64* %2, align 8
  %4 = icmp eq i64 %3, 0
  br i1 %4, label %5, label %12

5:                                                ; preds = %1
  %6 = load i64, i64* @L2C_DEF_NUM_BLE_BUF_SHARED, align 8
  store i64 %6, i64* %2, align 8
  %7 = load i64, i64* @L2C_DEF_NUM_BLE_BUF_SHARED, align 8
  %8 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @l2cb, i32 0, i32 2), align 8
  %9 = sext i32 %8 to i64
  %10 = sub nsw i64 %9, %7
  %11 = trunc i64 %10 to i32
  store i32 %11, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @l2cb, i32 0, i32 2), align 8
  br label %12

12:                                               ; preds = %5, %1
  %13 = load i64, i64* %2, align 8
  %14 = call i32 @L2CAP_TRACE_DEBUG(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0), i64 %13)
  %15 = load i64, i64* %2, align 8
  store i64 %15, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @l2cb, i32 0, i32 0), align 8
  store i64 %15, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @l2cb, i32 0, i32 1), align 8
  ret void
}

declare dso_local i32 @L2CAP_TRACE_DEBUG(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
